--- a/scss-css/base/elements/figure.scss
+++ b/scss-css/base/elements/figure.scss
@@ -1,10 +1,35 @@
 @import "../../mixins/mixins";
 @import "../../variables/variables";
 
-figure {
-  margin: 0;
+figure{
   img {
     display: block;
+  }
+}
+.text-formatted{
+  >a:has(>article.media){
+      /*fixes for link wrapping aligned images*/
+      display: inline-block;
+      max-width: 100%;
+      &:focus{       
+        outline:none;
+      }
+      @include min($breakpoint--m) {
+        &:has(.align-left){
+          clear: both;
+          float: left;  
+        }
+        &:has(.align-right){
+          clear: both;
+          float: right;  
+        }
+        &:has(.align-center){
+          display: flex;
+          margin-left: auto;
+          margin-right: auto; 
+          width: fit-content;                   
+        }
+      }
   }
 }
 
